--- a/src/Components/CSS/Contact.css
+++ b/src/Components/CSS/Contact.css
@@ -35,6 +35,7 @@
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     width: 90%;
     max-width: 400px;
+    flex-wrap: wrap;
 }
 
 .contact-grid a:hover {
@@ -59,6 +60,6 @@
     }
 
     .contact-grid a {
-        width: 100%;
+        width: 60%;
     }
 }
