--- a/src/Components/CSS/Home.css
+++ b/src/Components/CSS/Home.css
@@ -59,6 +59,7 @@ h4, h6 {
   display: flex;
   align-items: center;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
   transition: transform 0.3s ease-in-out;
 }
 
