Fix media issues

--- a/src/Components/CSS/Achievements.css
+++ b/src/Components/CSS/Achievements.css
@@ -1,4 +1,6 @@
 .Achievements-container {
+    height: 100%;
+    width: 100%;
     background: linear-gradient(135deg, #2e2e2e, #5a5a5a);
     text-align: center;
     padding: 40px 20px;
@@ -86,12 +88,13 @@
 
 @media (max-width: 480px) {
     .Achievements-container {
-        padding: 20px 5px;
+        padding: 20px;
     }
 
     .Achievement {
         max-width: 95%;
-        padding: 15px;
+        padding: 10px;
+        width: 80%;
     }
 
     .Achievement h1 {
