--- a/src/Components/CSS/NavBar.css
+++ b/src/Components/CSS/NavBar.css
@@ -1,6 +1,7 @@
 header {
     position: sticky;
     top: 0;
+    margin: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -128,6 +129,42 @@ nav li:hover {
         right: 0;
         background: #a3bcdb;
         width: 20%;
+        text-align: center;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+        border-radius: 0 0 10px 10px;
+    }
+
+    nav li {
+        padding: 15px;
+        margin: 0;
+        font-size: 16px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .menu-btn {
+        display: block;
+    }
+
+    .nav-open {
+        display: flex;
+    }
+}
+@media (max-width: 480px) {
+    header{
+        flex-wrap: wrap;
+        
+    }
+    header h1{
+        font-size: medium;
+    }
+    nav {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        background: #0072ff;
+        width: 30%;
         text-align: center;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
         border-radius: 0 0 10px 10px;
