--- a/src/Components/CSS/Projects.css
+++ b/src/Components/CSS/Projects.css
@@ -1,4 +1,5 @@
 .Projects-container {
+  width: 100%;
   background-color: #2c3e50;
   min-height: 100vh;
   padding: 50px;
@@ -21,6 +22,7 @@
 
 .Project-Container {
   background: linear-gradient(135deg, #34495e, #1abc9c);
+  width: 80%;
   padding: 20px;
   border-radius: 15px;
   margin: 10px;
@@ -74,7 +76,7 @@
 
 @media (max-width: 768px) {
   .Projects-container {
-      padding: 40px 20px;
+      padding: 40px;
   }
 
   .Projects-container h1 {
@@ -87,6 +89,7 @@
 
   .Project-Container {
       padding: 15px;
+      width: 70%;
   }
 
   .Project-Container h3 {
@@ -100,7 +103,7 @@
 
 @media (max-width: 480px) {
   .Projects-container {
-      padding: 30px 15px;
+      padding: 20px;
   }
 
   .Projects-container h1 {
@@ -109,6 +112,7 @@
 
   .Project-Container {
       padding: 12px;
+      width: 70%;
   }
 
   .Project-Container h3 {
@@ -119,3 +123,4 @@
       font-size: 0.85rem;
   }
 }
+
