--- a/src/Components/CSS/Skills.css
+++ b/src/Components/CSS/Skills.css
@@ -51,7 +51,7 @@
     }
 
     .Skill-container, .Tools-container {
-        width: 90%;
+        width: 70%;
         margin-bottom: 20px;
     }
 
@@ -84,7 +84,7 @@
 
 @media (max-width: 480px) {
     .Skills-container {
-        padding: 20px 10px;
+        padding: 20px;
     }
 
     .Skill-container, .Tools-container {
