--- a/src/Components/CSS/Contact.css
+++ b/src/Components/CSS/Contact.css
@@ -2,7 +2,7 @@
     height: 100%;
     width: 100%;
     background: linear-gradient(135deg, #1e3c72, #2a5298);
-    padding: 50px 20px;
+    padding: 10px 0 10px 0;
     text-align: center;
     color: white;
 }
