--- a/src/Components/CSS/Projects.css
+++ b/src/Components/CSS/Projects.css
@@ -1,8 +1,8 @@
 .Projects-container {
   width: 100%;
   background-color: #2c3e50;
-  min-height: 100vh;
-  padding: 50px;
+  min-height: 80vh;
+  padding: 10px 0 0 0;
   text-align: center;
   color: white;
 }
@@ -15,20 +15,20 @@
 
 .Projects-grid {
   display: grid;
-  grid-template-columns: repeat(2, minmax(300px, 1fr));
+  grid-template-columns: repeat(2, minmax(250px, 1fr));
   gap: 20px;
   justify-content: center;
 }
 
 .Project-Container {
   background: linear-gradient(135deg, #34495e, #1abc9c);
-  width: 80%;
   padding: 20px;
   border-radius: 15px;
   margin: 10px;
   color: white;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  align-content: center;
 }
 
 .Project-Container:hover {
@@ -75,9 +75,6 @@
 }
 
 @media (max-width: 768px) {
-  .Projects-container {
-      padding: 40px;
-  }
 
   .Projects-container h1 {
       font-size: 1.8rem;
@@ -85,11 +82,6 @@
 
   .Projects-grid {
       grid-template-columns: 1fr;
-  }
-
-  .Project-Container {
-      padding: 15px;
-      width: 70%;
   }
 
   .Project-Container h3 {
@@ -102,9 +94,6 @@
 }
 
 @media (max-width: 480px) {
-  .Projects-container {
-      padding: 20px;
-  }
 
   .Projects-container h1 {
       font-size: 1.6rem;
@@ -112,7 +101,6 @@
 
   .Project-Container {
       padding: 12px;
-      width: 70%;
   }
 
   .Project-Container h3 {
