--- a/src/Components/CSS/Achievements.css
+++ b/src/Components/CSS/Achievements.css
@@ -4,12 +4,14 @@
     background: linear-gradient(135deg, #2e2e2e, #5a5a5a);
     text-align: center;
     padding: 10px 0 10px 0;
+    min-height: 70vh;
     color: white;
 }
 
 .Achievements-container h1 {
     font-size: 2rem;
     margin-bottom: 20px;
+    padding: 60px;
     color: #ffcc00;
 }
 
@@ -48,6 +50,10 @@
 
 @media (max-width: 1024px) {
 
+    .Achievements-container {
+        min-height: 60vh;
+    }
+
     .Achievement {
         max-width: 80%;
         padding: 20px;
@@ -64,6 +70,10 @@
 }
 
 @media (max-width: 768px) {
+
+    .Achievements-container {
+        min-height: 60vh;
+    }
 
     .Achievement {
         max-width: 90%;
@@ -82,6 +92,9 @@
 
 @media (max-width: 480px) {
 
+    .Achievements-container {
+        min-height: 60vh;
+    }
     .Achievement {
         max-width: 95%;
         padding: 10px;
