--- a/src/Components/CSS/Home.css
+++ b/src/Components/CSS/Home.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 20px 0 0 0;
 }
 
 .Profile-container, .About-container {
